--- a/hs-prototype/Cargo.toml
+++ b/hs-prototype/Cargo.toml
@@ -14,6 +14,7 @@ futures = "0.3"
 tokio = { version = "0.2", features = ["full"] }
 log = "0.4.*"
 simplelog = ""
+async-trait = ""
 
 # tarpc = { version = "0.22", features =  ["full"]}
 # send and recv serde encodedable types over network using tokio.
