--- a/hotstuff-rs/Cargo.toml
+++ b/hotstuff-rs/Cargo.toml
@@ -16,6 +16,7 @@ simplelog = ""
 base64 = ""
 anyhow = ""
 thiserror = ""
+lazy_static = ""
 
 # tarpc = { version = "0.22", features =  ["full"]}
 # send and recv serde encodedable types over network using tokio.
