--- a/hotstuff-rs/Cargo.toml
+++ b/hotstuff-rs/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = ""
+#rand = ""
+rand = "0.7.3"
 threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
 sha2 = ""
 serde = ""
