--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,11 +1,11 @@
-# run cargo test & build in hostuff-rs/ at branch dev.
+# run cargo test & build in hostuff-rs/ at branch master.
 name: hotstuff-rs-cargo
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ master ]
   pull_request:
-    branches: [ dev ]
+    branches: [ master ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,7 +14,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-#    - uses: actions/checkout@dev
     - uses: actions/checkout@v1
     - name: Build
       working-directory: ./hotstuff-rs
