--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,9 +3,9 @@ name: hotstuff-rs-cargo
 
 on:
   push:
-    branches: [ master ]
+    branches: [ dev ]
   pull_request:
-    branches: [ master ]
+    branches: [ dev ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -15,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Build
+#    - name: Build
+#      working-directory: ./hotstuff-rs
+#      run: cargo build 
+    - name: Run hotstuff tests
       working-directory: ./hotstuff-rs
-      run: cargo build --verbose
-    - name: Run tests
-      working-directory: ./hotstuff-rs
-      run: cargo test --verbose
+      run: cargo test 
