--- a/hotstuff-rs/Cargo.toml
+++ b/hotstuff-rs/Cargo.toml
@@ -11,10 +11,9 @@ threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/thres
 sha2 = ""
 serde = ""
 serde_json = ""
-log = "0.4.*"
-simplelog = ""
+log = ""
+simplelog = "0.9.0"
 base64 = ""
-anyhow = ""
 thiserror = ""
 lazy_static = ""
 
