--- a/pacemaker/Cargo.toml
+++ b/pacemaker/Cargo.toml
@@ -10,9 +10,11 @@ edition = "2018"
 hotstuff-rs = { path = "../hotstuff-rs" }
 fnv = "1.0.3"
 serde = ""
+serde_json = ""
 futures = "0.3"
 tokio = { version = "1.1", features = ["full"] }
 libp2p = "0.34"
 log = ""
 futures-timer = ""
 rand = ""
+simplelog = ""
