--- a/pacemaker/Cargo.toml
+++ b/pacemaker/Cargo.toml
@@ -13,8 +13,10 @@ serde = ""
 serde_json = ""
 futures = "0.3"
 tokio = { version = "1.1", features = ["full"] }
-libp2p = "0.34"
 log = ""
 futures-timer = ""
 rand = ""
 simplelog = ""
+
+[[bin]]
+name = "bootstrap"
