separate InMemory from hotstuff-rs & tidy up

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build
-      working-directory: ./hotstuff-rs
+      working-directory: ./hs-test
       run: cargo build 
     - name: Run hotstuff tests
-      working-directory: ./hotstuff-rs
+      working-directory: ./hs-test
       run: cargo test 
