--- a/cryptokit/Cargo.toml
+++ b/cryptokit/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hss"
+name = "cryptokit"
 version = "0.1.0"
 authors = ["Tsumida <tsumida@163.com>"]
 edition = "2018"
@@ -7,12 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hotstuff-rs = {path = "../hotstuff-rs"}
-pacemaker = {path = "../pacemaker"}
-hs-data = {path = "../hs-data"} 
-cryptokit = {path = "../cryptokit"}
-sled = ""
 serde = ""
-serde_json = ""
-simplelog = ""
-log = ""
+thiserror = ""
+hs-data = {path = "../hs-data"}
+rand = ""
+sha2 = ""
+base64 = ""
+lazy_static = ""
