--- a/hotstuff-rs/Cargo.toml
+++ b/hotstuff-rs/Cargo.toml
@@ -6,16 +6,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = ""
-threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
-sha2 = ""
+hs-data = {path = "../hs-data"}
+cryptokit = {path = "../cryptokit"}
 serde = ""
 serde_json = ""
 log = ""
 simplelog = "0.9.0"
-base64 = ""
 thiserror = ""
-lazy_static = ""
 
 
 # tarpc = { version = "0.22", features =  ["full"]}
