--- a/hss/Cargo.toml
+++ b/hss/Cargo.toml
@@ -16,4 +16,6 @@ serde = ""
 serde_json = ""
 simplelog = ""
 log = ""
-sqlx = { version = "0.4.1", features = [ "mysql", "runtime-tokio-rustls" ] }
+tokio = {version = "1.2", features = ["full"]}
+sqlx = { version = "0.5", features = [ "mysql", "runtime-tokio-rustls" ] }
+futures = {version="0.3"}
