--- a/hotstuff-rs/Cargo.toml
+++ b/hotstuff-rs/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = ""
 log = ""
 simplelog = "0.9.0"
 thiserror = ""
+async-trait = ""
 
 
 # tarpc = { version = "0.22", features =  ["full"]}
