--- a/hs-data/Cargo.toml
+++ b/hs-data/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 serde = ""
 threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
-rand = ""
+rand = "=0.7.3"
 sha2 = ""
 base64 = ""
 thiserror = ""
