--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,14 +29,7 @@ jobs:
     - name: Build hs-test
       working-directory: ./hs-test
       run: cargo build 
-    - name: Run hs-test
+    - name: Test-Safety
       working-directory: ./hs-test
-      run: cargo test 
-      env:
-        DB_PORT: 3306
-    - name: Build hss
-      working-directory: ./hss
-      run: cargo build
-    - name: Run hss tests
-      working-directory: ./hss
-      run: cargo test
+      run: cargo test safety
+    
