--- a/examples/demo/Cargo.toml
+++ b/examples/demo/Cargo.toml
@@ -25,6 +25,7 @@ threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/thres
 clap = ""
 warp = "0.3"
 rand = "=0.7.3"
+once_cell = "1.7.2"
 
 [[bin]]
 name = "generate_sk"
