--- a/examples/demo/Cargo.toml
+++ b/examples/demo/Cargo.toml
@@ -26,6 +26,7 @@ clap = ""
 warp = "0.3"
 rand = "=0.7.3"
 once_cell = "1.7.2"
+redis = { version = "0.19.0", features = ["tls"] }
 
 [[bin]]
 name = "generate_sk"
