--- a/examples/demo/Cargo.toml
+++ b/examples/demo/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "demo"
 version = "0.1.0"
-authors = ["Tsumida <elsa110249@163.com>"]
+authors = ["Tsumida <tsumida@163.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -26,10 +26,11 @@ clap = ""
 warp = "0.3"
 rand = "=0.7.3"
 once_cell = "1.7.2"
-redis = { version = "0.19.0", features = ["tls"] }
+tempfile = "3"
+# redis = { version = "0.19.0", features = ["tls"] }
 
 [[bin]]
-name = "generate_sk"
+name = "test_kit"
 test = false
 bench = false
 
